added reedited hong ray pics and my AI generated one

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="description" content="We would like to invite you to our big day.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#ffffff">
-    <meta property="og:title" content="Simon & Amanda">
+    <meta property="og:title" content="Simon & Amanda getting hitched">
     <meta property="og:description" content="We would like to invite you to our big day.">
     <meta property="og:image" content="https://wedding.ramswaroop.me/img/hero-min.jpg">
     <meta property="og:type" content="website">
@@ -578,8 +578,8 @@
           <div class="faq-answer">Yes, please let us know so we can make arrangements accordingly</div>
         </div>
         <div class="faq-item">
-          <div class="faq-question">I'm planning to drive, where can I park?</div>
-          <div class="faq-answer"><p>You may park at the <a href="https://maps.app.goo.gl/Y62Avcqk8d7aV2gaA" target="_blank" style="text-decoration: underline;">multi-story carpark</a> behind the church.</p></div>
+          <div class="faq-question">Will there be complimentary parking?</div>
+          <div class="faq-answer">Yes, complimentary parking coupons are available</div>
         </div>
       </div>
     </div>
@@ -721,64 +721,21 @@ document.addEventListener("DOMContentLoaded", function () {
 
 <script>
   document.addEventListener("DOMContentLoaded", function () {
-    const form = document.querySelector(".rsvp-form");
+    const form = document.querySelector(".rsvp-form"); // Adjust selector if needed
     const contactInput = document.getElementById("contact");
-    const alertWrapper = document.getElementById("alert-wrapper");
-
-    let responseValue = null; // Track which button is clicked
-
-    // Track which button was pressed
-    const buttons = form.querySelectorAll("button[type=submit][name=response]");
-    buttons.forEach(button => {
-      button.addEventListener("click", function () {
-        responseValue = this.value === "accept" ? "yes" : "no";
-      });
-    });
 
     form.addEventListener("submit", function (e) {
-      e.preventDefault();
-
       const contactValue = contactInput.value.trim();
       const phonePattern = /^[689]\d{7}$/;
 
       if (!phonePattern.test(contactValue)) {
         alert("Please enter a valid 8-digit Singapore contact number");
         contactInput.focus();
-        return;
+        e.preventDefault();
       }
-
-      alertWrapper.innerHTML = "<p>Saving your details...</p>";
-
-      const formData = new FormData(form);
-      if (responseValue) {
-        formData.set("response", responseValue); // ✅ add "yes"/"no" explicitly
-      }
-
-      const data = {};
-      formData.forEach((value, key) => {
-        data[key] = value;
-      });
-
-      const scriptURL = "https://script.google.com/macros/s/AKfycbyZIuibGZvvOgMAPmGdJFpfW3FCa2DOE6h-RCbTy5oEE-By4v2cSdg7zViAIG_UzacC/exec";
-
-      fetch(scriptURL, {
-        method: 'POST',
-        mode: 'no-cors',
-        body: new URLSearchParams(data)
-      })
-        .then(() => {
-          alertWrapper.innerHTML = "<p>Thanks for RSVPing!</p>";
-          form.reset();
-        })
-        .catch(error => {
-          console.error("Error!", error.message);
-          alertWrapper.innerHTML = "<p>Something went wrong. Please try again later.</p>";
-        });
     });
   });
 </script>
-
-
 
 <!--Proposal Slideshow-->
 <!-- Scroll-triggered fade-in -->
@@ -1036,14 +993,14 @@ document.addEventListener("DOMContentLoaded", function () {
 <script>
   document.addEventListener("DOMContentLoaded", function () {
 const images = [
-  "img/run-1.jpg",
   "img/run-2.jpg",
-  "img/run-3.jpg",
-  "img/run-4.jpg",
-  "img/run-5.jpg",
   "img/run-6.jpg",
+  "img/run-8.jpg",
+  "img/run-5.jpg",
+
+  "img/run-3.jpg",
   "img/run-7.jpg",
-  "img/run-8.jpg"
+  "img/run-1.jpg"
 ];
 
 
@@ -1073,7 +1030,7 @@ function showNextImage() {
 }
 
 
-    setInterval(showNextImage, 250); // 0.25s switch
+    setInterval(showNextImage, 300); // 0.3s switch
   });
 </script>
 
