--- a/index.html
+++ b/index.html
@@ -235,42 +235,60 @@
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_1.jpg">
                         <div class="image-box">
-                                <img src="img/eng_pics/eng_pic_1.jpg" alt="Pre-Wedding 1"/>
+    <picture>
+      <source srcset="img/eng_pics/eng_pic_1.webp" type="image/webp">
+      <img src="img/eng_pics/eng_pic_1.jpg" alt="Pre-Wedding 1" loading="lazy">
+    </picture>
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_2.jpg">
                         <div class="image-box">
-                                <img src="img/eng_pics/eng_pic_2.jpg" alt="Pre-Wedding 2"/>
+    <picture>
+      <source srcset="img/eng_pics/eng_pic_2.webp" type="image/webp">
+      <img src="img/eng_pics/eng_pic_2.jpg" alt="Pre-Wedding 2" loading="lazy">
+    </picture>
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_3.jpg">
                         <div class="image-box">
-                                <img src="img/eng_pics/eng_pic_3.jpg" alt="Pre-Wedding 3"/>
+    <picture>
+      <source srcset="img/eng_pics/eng_pic_3.webp" type="image/webp">
+      <img src="img/eng_pics/eng_pic_3.jpg" alt="Pre-Wedding 3" loading="lazy">
+    </picture>
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_4.jpg">
                         <div class="image-box">
-                                <img src="img/eng_pics/eng_pic_4.jpg" alt="Pre-Wedding 4"/>
+    <picture>
+      <source srcset="img/eng_pics/eng_pic_4.webp" type="image/webp">
+      <img src="img/eng_pics/eng_pic_4.jpg" alt="Pre-Wedding 4" loading="lazy">
+    </picture>
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_5.jpg">
                         <div class="image-box">
-                                <img src="img/eng_pics/eng_pic_5.jpg" alt="Pre-Wedding 5"/>
+    <picture>
+      <source srcset="img/eng_pics/eng_pic_5.webp" type="image/webp">
+      <img src="img/eng_pics/eng_pic_5.jpg" alt="Pre-Wedding 5" loading="lazy">
+    </picture>
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_6.jpg">
                         <div class="image-box">
-                                <img src="img/eng_pics/eng_pic_6.jpg" alt="Pre-Wedding 6"/>
+    <picture>
+      <source srcset="img/eng_pics/eng_pic_6.webp" type="image/webp">
+      <img src="img/eng_pics/eng_pic_6.jpg" alt="Pre-Wedding 6" loading="lazy">
+    </picture>
                         </div>
                     </a>
                 </div>
@@ -578,8 +596,8 @@
           <div class="faq-answer">Yes, please let us know so we can make arrangements accordingly</div>
         </div>
         <div class="faq-item">
-          <div class="faq-question">Will there be complimentary parking?</div>
-          <div class="faq-answer">Yes, complimentary parking coupons are available</div>
+          <div class="faq-question">I'm planning to drive, where can I park?</div>
+          <div class="faq-answer"><p>You may park at the <a href="https://maps.app.goo.gl/Y62Avcqk8d7aV2gaA" target="_blank" style="text-decoration: underline;">multi-story carpark</a> behind the church.</p></div>
         </div>
       </div>
     </div>
@@ -721,18 +739,59 @@ document.addEventListener("DOMContentLoaded", function () {
 
 <script>
   document.addEventListener("DOMContentLoaded", function () {
-    const form = document.querySelector(".rsvp-form"); // Adjust selector if needed
+    const form = document.querySelector(".rsvp-form");
     const contactInput = document.getElementById("contact");
+    const alertWrapper = document.getElementById("alert-wrapper");
+
+    let responseValue = null; // Track which button is clicked
+
+    // Track which button was pressed
+    const buttons = form.querySelectorAll("button[type=submit][name=response]");
+    buttons.forEach(button => {
+      button.addEventListener("click", function () {
+        responseValue = this.value === "accept" ? "yes" : "no";
+      });
+    });
 
     form.addEventListener("submit", function (e) {
+      e.preventDefault();
+
       const contactValue = contactInput.value.trim();
       const phonePattern = /^[689]\d{7}$/;
 
       if (!phonePattern.test(contactValue)) {
         alert("Please enter a valid 8-digit Singapore contact number");
         contactInput.focus();
-        e.preventDefault();
+        return;
       }
+
+      alertWrapper.innerHTML = "<p>Saving your details...</p>";
+
+      const formData = new FormData(form);
+      if (responseValue) {
+        formData.set("response", responseValue); // ✅ add "yes"/"no" explicitly
+      }
+
+      const data = {};
+      formData.forEach((value, key) => {
+        data[key] = value;
+      });
+
+      const scriptURL = "https://script.google.com/macros/s/AKfycbyZIuibGZvvOgMAPmGdJFpfW3FCa2DOE6h-RCbTy5oEE-By4v2cSdg7zViAIG_UzacC/exec";
+
+      fetch(scriptURL, {
+        method: 'POST',
+        mode: 'no-cors',
+        body: new URLSearchParams(data)
+      })
+        .then(() => {
+          alertWrapper.innerHTML = "<p>Thanks for RSVPing!</p>";
+          form.reset();
+        })
+        .catch(error => {
+          console.error("Error!", error.message);
+          alertWrapper.innerHTML = "<p>Something went wrong. Please try again later.</p>";
+        });
     });
   });
 </script>
@@ -876,6 +935,7 @@ document.addEventListener("DOMContentLoaded", function () {
     });
   });
 </script>
+
 
 
 
