--- a/index.html
+++ b/index.html
@@ -235,74 +235,80 @@
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_1.jpg">
                         <div class="image-box">
-    <picture>
-      <source srcset="img/eng_pics/eng_pic_1.webp" type="image/webp">
-      <img src="img/eng_pics/eng_pic_1.jpg" alt="Pre-Wedding 1" loading="lazy">
-    </picture>
+                            <picture>
+                              <source srcset="img/eng_pics/webp_eng_pic_1.webp" type="image/webp">
+                              <img src="img/eng_pics/eng_pic_1.jpg" alt="Pre-Wedding 1" loading="lazy">
+                            </picture>
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_2.jpg">
                         <div class="image-box">
-    <picture>
-      <source srcset="img/eng_pics/eng_pic_2.webp" type="image/webp">
-      <img src="img/eng_pics/eng_pic_2.jpg" alt="Pre-Wedding 2" loading="lazy">
-    </picture>
+                            <picture>
+                              <source srcset="img/eng_pics/webp_eng_pic_2.webp" type="image/webp">
+                              <img src="img/eng_pics/eng_pic_2.jpg" alt="Pre-Wedding 2" loading="lazy">
+                            </picture>
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_3.jpg">
                         <div class="image-box">
-    <picture>
-      <source srcset="img/eng_pics/eng_pic_3.webp" type="image/webp">
-      <img src="img/eng_pics/eng_pic_3.jpg" alt="Pre-Wedding 3" loading="lazy">
-    </picture>
+                            <picture>
+                              <source srcset="img/eng_pics/webp_eng_pic_3.webp" type="image/webp">
+                              <img src="img/eng_pics/eng_pic_3.jpg" alt="Pre-Wedding 3" loading="lazy">
+                            </picture>
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_4.jpg">
                         <div class="image-box">
-    <picture>
-      <source srcset="img/eng_pics/eng_pic_4.webp" type="image/webp">
-      <img src="img/eng_pics/eng_pic_4.jpg" alt="Pre-Wedding 4" loading="lazy">
-    </picture>
+                            <picture>
+                              <source srcset="img/eng_pics/webp_eng_pic_4.webp" type="image/webp">
+                              <img src="img/eng_pics/eng_pic_4.jpg" alt="Pre-Wedding 4" loading="lazy">
+                            </picture>
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_5.jpg">
                         <div class="image-box">
-    <picture>
-      <source srcset="img/eng_pics/eng_pic_5.webp" type="image/webp">
-      <img src="img/eng_pics/eng_pic_5.jpg" alt="Pre-Wedding 5" loading="lazy">
-    </picture>
+                            <picture>
+                              <source srcset="img/eng_pics/webp_eng_pic_5.webp" type="image/webp">
+                              <img src="img/eng_pics/eng_pic_5.jpg" alt="Pre-Wedding 5" loading="lazy">
+                            </picture>
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_6.jpg">
                         <div class="image-box">
-    <picture>
-      <source srcset="img/eng_pics/eng_pic_6.webp" type="image/webp">
-      <img src="img/eng_pics/eng_pic_6.jpg" alt="Pre-Wedding 6" loading="lazy">
-    </picture>
+                            <picture>
+                              <source srcset="img/eng_pics/webp_eng_pic_6.webp" type="image/webp">
+                              <img src="img/eng_pics/eng_pic_6.jpg" alt="Pre-Wedding 6" loading="lazy">
+                            </picture>
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_7.jpg">
                         <div class="image-box">
-                                <img src="img/eng_pics/eng_pic_7.jpg" alt="Pre-Wedding 7"/>
+                            <picture>
+                              <source srcset="img/eng_pics/webp_eng_pic_7.webp" type="image/webp">
+                              <img src="img/eng_pics/eng_pic_7.jpg" alt="Pre-Wedding 7" loading="lazy">
+                            </picture>
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_8.jpg">
                         <div class="image-box">
-                                <img src="img/eng_pics/eng_pic_8.jpg" alt="Pre-Wedding 8"/>
+                            <picture>
+                              <source srcset="img/eng_pics/webp_eng_pic_8.webp" type="image/webp">
+                              <img src="img/eng_pics/eng_pic_8.jpg" alt="Pre-Wedding 8" loading="lazy">
+                            </picture>
                         </div>
                     </a>
                 </div>                
