--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                         <div class="image-box">
                             <picture>
                               <source srcset="img/eng_pics/webp_eng_pic_1.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_1.jpg" alt="Pre-Wedding 1" loading="lazy">
+                              <img src="img/eng_pics/eng_pic_1.jpg" alt="Pre-Wedding 1">
                             </picture>
                         </div>
                     </a>
@@ -247,7 +247,7 @@
                         <div class="image-box">
                             <picture>
                               <source srcset="img/eng_pics/webp_eng_pic_2.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_2.jpg" alt="Pre-Wedding 2" loading="lazy">
+                              <img src="img/eng_pics/eng_pic_2.jpg" alt="Pre-Wedding 2">
                             </picture>
                         </div>
                     </a>
@@ -257,7 +257,7 @@
                         <div class="image-box">
                             <picture>
                               <source srcset="img/eng_pics/webp_eng_pic_3.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_3.jpg" alt="Pre-Wedding 3" loading="lazy">
+                              <img src="img/eng_pics/eng_pic_3.jpg" alt="Pre-Wedding 3">
                             </picture>
                         </div>
                     </a>
@@ -267,7 +267,7 @@
                         <div class="image-box">
                             <picture>
                               <source srcset="img/eng_pics/webp_eng_pic_4.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_4.jpg" alt="Pre-Wedding 4" loading="lazy">
+                              <img src="img/eng_pics/eng_pic_4.jpg" alt="Pre-Wedding 4">
                             </picture>
                         </div>
                     </a>
@@ -277,7 +277,7 @@
                         <div class="image-box">
                             <picture>
                               <source srcset="img/eng_pics/webp_eng_pic_5.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_5.jpg" alt="Pre-Wedding 5" loading="lazy">
+                              <img src="img/eng_pics/eng_pic_5.jpg" alt="Pre-Wedding 5">
                             </picture>
                         </div>
                     </a>
@@ -287,7 +287,7 @@
                         <div class="image-box">
                             <picture>
                               <source srcset="img/eng_pics/webp_eng_pic_6.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_6.jpg" alt="Pre-Wedding 6" loading="lazy">
+                              <img src="img/eng_pics/eng_pic_6.jpg" alt="Pre-Wedding 6">
                             </picture>
                         </div>
                     </a>
@@ -297,7 +297,7 @@
                         <div class="image-box">
                             <picture>
                               <source srcset="img/eng_pics/webp_eng_pic_7.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_7.jpg" alt="Pre-Wedding 7" loading="lazy">
+                              <img src="img/eng_pics/eng_pic_7.jpg" alt="Pre-Wedding 7">
                             </picture>
                         </div>
                     </a>
@@ -307,7 +307,7 @@
                         <div class="image-box">
                             <picture>
                               <source srcset="img/eng_pics/webp_eng_pic_8.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_8.jpg" alt="Pre-Wedding 8" loading="lazy">
+                              <img src="img/eng_pics/eng_pic_8.jpg" alt="Pre-Wedding 8">
                             </picture>
                         </div>
                     </a>
@@ -335,59 +335,83 @@
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_9.jpg">
                         <div class="image-box">
-                                <img src="img/eng_pics/eng_pic_9.jpg" alt="Pre-Wedding 9"/>
+                            <picture>
+                              <source srcset="img/eng_pics/webp_eng_pic_9.webp" type="image/webp">
+                              <img src="img/eng_pics/eng_pic_9.jpg" alt="Pre-Wedding 9">
+                            </picture>
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_10.jpg">
                         <div class="image-box">
-                                <img src="img/eng_pics/eng_pic_10.jpg" alt="Pre-Wedding 10"/>
+                            <picture>
+                              <source srcset="img/eng_pics/webp_eng_pic_10.webp" type="image/webp">
+                              <img src="img/eng_pics/eng_pic_10.jpg" alt="Pre-Wedding 10">
+                            </picture>
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_11.jpg">
                         <div class="image-box">
-                                <img src="img/eng_pics/eng_pic_11.jpg" alt="Pre-Wedding 11"/>
+                            <picture>
+                              <source srcset="img/eng_pics/webp_eng_pic_11.webp" type="image/webp">
+                              <img src="img/eng_pics/eng_pic_11.jpg" alt="Pre-Wedding 11">
+                            </picture>
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_12.jpg">
                         <div class="image-box">
-                                <img src="img/eng_pics/eng_pic_12.jpg" alt="Pre-Wedding 12"/>
+                            <picture>
+                              <source srcset="img/eng_pics/webp_eng_pic_12.webp" type="image/webp">
+                              <img src="img/eng_pics/eng_pic_12.jpg" alt="Pre-Wedding 12">
+                            </picture>
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_13.jpg">
                         <div class="image-box">
-                                <img src="img/eng_pics/eng_pic_13.jpg" alt="Pre-Wedding 13"/>
+                            <picture>
+                              <source srcset="img/eng_pics/webp_eng_pic_13.webp" type="image/webp">
+                              <img src="img/eng_pics/eng_pic_13.jpg" alt="Pre-Wedding 13">
+                            </picture>
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_14.jpg">
                         <div class="image-box">
-                                <img src="img/eng_pics/eng_pic_14.jpg" alt="Pre-Wedding 14"/>
+                            <picture>
+                              <source srcset="img/eng_pics/webp_eng_pic_14.webp" type="image/webp">
+                              <img src="img/eng_pics/eng_pic_14.jpg" alt="Pre-Wedding 14">
+                            </picture>
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_15.jpg">
                         <div class="image-box">
-                                <img src="img/eng_pics/eng_pic_15.jpg" alt="Pre-Wedding 15"/>
+                            <picture>
+                              <source srcset="img/eng_pics/webp_eng_pic_15.webp" type="image/webp">
+                              <img src="img/eng_pics/eng_pic_15.jpg" alt="Pre-Wedding 15">
+                            </picture>
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_16.jpg">
                         <div class="image-box">
-                                <img src="img/eng_pics/eng_pic_16.jpg" alt="Pre-Wedding 16"/>
+                            <picture>
+                              <source srcset="img/eng_pics/webp_eng_pic_16.webp" type="image/webp">
+                              <img src="img/eng_pics/eng_pic_16.jpg" alt="Pre-Wedding 16">
+                            </picture>
                         </div>
                     </a>
-                </div>                
+                </div>    
             </div>
             </div>
             <button class="carousel-arrow right" aria-label="Next">
@@ -691,7 +715,7 @@ document.addEventListener("DOMContentLoaded", function () {
       track.appendChild(clone);
     });
 
-    const scrollSpeed = 2;
+    const scrollSpeed = window.innerWidth <= 768 ? 4 : 2;
     const scrollStep = 420;
     let pauseUntil = 0;
 
@@ -725,19 +749,19 @@ document.addEventListener("DOMContentLoaded", function () {
     // Pause on interaction
     ['wheel', 'touchstart', 'mousedown'].forEach(evt => {
       wrapper.addEventListener(evt, () => {
-        pauseUntil = Date.now() + 3000;
+        pauseUntil = Date.now() + 1000;
       }, { passive: true });
     });
 
     // Manual arrows
     leftArrow.addEventListener("click", () => {
       wrapper.scrollLeft -= scrollStep;
-      pauseUntil = Date.now() + 3000;
+      pauseUntil = Date.now() + 2000;
     });
 
     rightArrow.addEventListener("click", () => {
       wrapper.scrollLeft += scrollStep;
-      pauseUntil = Date.now() + 3000;
+      pauseUntil = Date.now() + 2000;
     });
   });
 });
