--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                         <div class="image-box">
                             <picture>
                               <source srcset="img/eng_pics/webp_eng_pic_1.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_1.jpg" alt="Pre-Wedding 1">
+                              <img src="img/eng_pics/eng_pic_1.jpg" alt="Pre-Wedding 1" loading="lazy">
                             </picture>
                         </div>
                     </a>
@@ -247,7 +247,7 @@
                         <div class="image-box">
                             <picture>
                               <source srcset="img/eng_pics/webp_eng_pic_2.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_2.jpg" alt="Pre-Wedding 2">
+                              <img src="img/eng_pics/eng_pic_2.jpg" alt="Pre-Wedding 2" loading="lazy">
                             </picture>
                         </div>
                     </a>
@@ -257,7 +257,7 @@
                         <div class="image-box">
                             <picture>
                               <source srcset="img/eng_pics/webp_eng_pic_3.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_3.jpg" alt="Pre-Wedding 3">
+                              <img src="img/eng_pics/eng_pic_3.jpg" alt="Pre-Wedding 3" loading="lazy">
                             </picture>
                         </div>
                     </a>
@@ -267,17 +267,17 @@
                         <div class="image-box">
                             <picture>
                               <source srcset="img/eng_pics/webp_eng_pic_4.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_4.jpg" alt="Pre-Wedding 4">
+                              <img src="img/eng_pics/eng_pic_4.jpg" alt="Pre-Wedding 4" loading="lazy">
                             </picture>
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
-                    <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_5.jpg">
+                    <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_5.jpg" loading="lazy">
                         <div class="image-box">
                             <picture>
                               <source srcset="img/eng_pics/webp_eng_pic_5.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_5.jpg" alt="Pre-Wedding 5">
+                              <img src="img/eng_pics/eng_pic_5.jpg" alt="Pre-Wedding 5" loading="lazy">
                             </picture>
                         </div>
                     </a>
@@ -287,7 +287,7 @@
                         <div class="image-box">
                             <picture>
                               <source srcset="img/eng_pics/webp_eng_pic_6.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_6.jpg" alt="Pre-Wedding 6">
+                              <img src="img/eng_pics/eng_pic_6.jpg" alt="Pre-Wedding 6" loading="lazy">
                             </picture>
                         </div>
                     </a>
@@ -297,7 +297,7 @@
                         <div class="image-box">
                             <picture>
                               <source srcset="img/eng_pics/webp_eng_pic_7.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_7.jpg" alt="Pre-Wedding 7">
+                              <img src="img/eng_pics/eng_pic_7.jpg" alt="Pre-Wedding 7" loading="lazy">
                             </picture>
                         </div>
                     </a>
@@ -307,7 +307,7 @@
                         <div class="image-box">
                             <picture>
                               <source srcset="img/eng_pics/webp_eng_pic_8.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_8.jpg" alt="Pre-Wedding 8">
+                              <img src="img/eng_pics/eng_pic_8.jpg" alt="Pre-Wedding 8" loading="lazy">
                             </picture>
                         </div>
                     </a>
@@ -337,7 +337,7 @@
                         <div class="image-box">
                             <picture>
                               <source srcset="img/eng_pics/webp_eng_pic_9.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_9.jpg" alt="Pre-Wedding 9">
+                              <img src="img/eng_pics/eng_pic_9.jpg" alt="Pre-Wedding 9" loading="lazy">
                             </picture>
                         </div>
                     </a>
@@ -347,17 +347,17 @@
                         <div class="image-box">
                             <picture>
                               <source srcset="img/eng_pics/webp_eng_pic_10.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_10.jpg" alt="Pre-Wedding 10">
+                              <img src="img/eng_pics/eng_pic_10.jpg" alt="Pre-Wedding 10" loading="lazy">
                             </picture>
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
-                    <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_11.jpg">
+                    <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_11.jpg" loading="lazy">
                         <div class="image-box">
                             <picture>
                               <source srcset="img/eng_pics/webp_eng_pic_11.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_11.jpg" alt="Pre-Wedding 11">
+                              <img src="img/eng_pics/eng_pic_11.jpg" alt="Pre-Wedding 11" loading="lazy">
                             </picture>
                         </div>
                     </a>
@@ -367,7 +367,7 @@
                         <div class="image-box">
                             <picture>
                               <source srcset="img/eng_pics/webp_eng_pic_12.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_12.jpg" alt="Pre-Wedding 12">
+                              <img src="img/eng_pics/eng_pic_12.jpg" alt="Pre-Wedding 12" loading="lazy">
                             </picture>
                         </div>
                     </a>
@@ -377,7 +377,7 @@
                         <div class="image-box">
                             <picture>
                               <source srcset="img/eng_pics/webp_eng_pic_13.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_13.jpg" alt="Pre-Wedding 13">
+                              <img src="img/eng_pics/eng_pic_13.jpg" alt="Pre-Wedding 13" loading="lazy">
                             </picture>
                         </div>
                     </a>
@@ -387,7 +387,7 @@
                         <div class="image-box">
                             <picture>
                               <source srcset="img/eng_pics/webp_eng_pic_14.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_14.jpg" alt="Pre-Wedding 14">
+                              <img src="img/eng_pics/eng_pic_14.jpg" alt="Pre-Wedding 14" loading="lazy">
                             </picture>
                         </div>
                     </a>
@@ -397,7 +397,7 @@
                         <div class="image-box">
                             <picture>
                               <source srcset="img/eng_pics/webp_eng_pic_15.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_15.jpg" alt="Pre-Wedding 15">
+                              <img src="img/eng_pics/eng_pic_15.jpg" alt="Pre-Wedding 15" loading="lazy">
                             </picture>
                         </div>
                     </a>
@@ -407,7 +407,7 @@
                         <div class="image-box">
                             <picture>
                               <source srcset="img/eng_pics/webp_eng_pic_16.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_16.jpg" alt="Pre-Wedding 16">
+                              <img src="img/eng_pics/eng_pic_16.jpg" alt="Pre-Wedding 16" loading="lazy">
                             </picture>
                         </div>
                     </a>
