added watches bg to the countdown timer,change carousel pics

--- a/index.html
+++ b/index.html
@@ -117,22 +117,22 @@
   <p class="venue-location">Conrad Singapore Marina Bay</p>
   <p class="event-time"><i class="fa fa-clock-o"></i>&nbsp;07:00pm – 11:00pm</p>
 </div>
+  <div class="countdown-wrapper">
+    <div class="countdown-image-box">
+      <img src="img/D1_09740.jpg" alt="Countdown BG" class="countdown-bg" />
+      
+    <!-- Countdown text overlayed -->
+    <div class="countdown-text">
+      <span id="days">--</span> Days
+      <span id="hours">--</span> Hrs
+      <span id="minutes">--</span> Min
+      <span id="seconds">--</span> Sec
+    </div>
+  </div>
 
-                <div id="countdown" class="countdown-timer">
-                    <span id="days">--</span> Days
-                    <span id="hours">--</span> Hrs
-                    <span id="minutes">--</span> Min
-                    <span id="seconds">--</span> Sec
-                </div>
-                <a href="#rsvp" class="btn btn-accent btn-large rsvp-btn">RSVP</a>
-            </div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row hidden-lg hidden-md hidden-xs">
-            <div class="col-xs-12 section-border section-padding"></div>
-        </div>
-    </div>
+  <!-- RSVP button below the image -->
+  <a href="#rsvp" class="rsvp-btn">RSVP</a>
+</div>            
 </section>
 
 
@@ -236,50 +236,38 @@
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_1.jpg">
                         <div class="image-box">
-                            <picture>
-                              <source srcset="img/eng_pics/webp_eng_pic_1.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_1.jpg" alt="Pre-Wedding 1" loading="lazy">
-                            </picture>
+                                <img src="img/eng_pics/eng_pic_1.jpg" alt="Pre-Wedding 1"/>
+
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_2.jpg">
                         <div class="image-box">
-                            <picture>
-                              <source srcset="img/eng_pics/webp_eng_pic_2.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_2.jpg" alt="Pre-Wedding 2" loading="lazy">
-                            </picture>
+                                <img src="img/eng_pics/eng_pic_2.jpg" alt="Pre-Wedding 2"/>
+
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_3.jpg">
                         <div class="image-box">
-                            <picture>
-                              <source srcset="img/eng_pics/webp_eng_pic_3.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_3.jpg" alt="Pre-Wedding 3" loading="lazy">
-                            </picture>
+                                <img src="img/eng_pics/eng_pic_3.jpg" alt="Pre-Wedding 3"/>
+
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_4.jpg">
                         <div class="image-box">
-                            <picture>
-                              <source srcset="img/eng_pics/webp_eng_pic_4.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_4.jpg" alt="Pre-Wedding 4" loading="lazy">
-                            </picture>
+                                <img src="img/eng_pics/eng_pic_4.jpg" alt="Pre-Wedding 4"/>
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_5.jpg" loading="lazy">
                         <div class="image-box">
-                            <picture>
-                              <source srcset="img/eng_pics/webp_eng_pic_5.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_5.jpg" alt="Pre-Wedding 5" loading="lazy">
-                            </picture>
+                                <img src="img/eng_pics/eng_pic_5.jpg" alt="Pre-Wedding 5"/>
                         </div>
                     </a>
                 </div>
@@ -296,20 +284,15 @@
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_7.jpg">
                         <div class="image-box">
-                            <picture>
-                              <source srcset="img/eng_pics/webp_eng_pic_7.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_7.jpg" alt="Pre-Wedding 7" loading="lazy">
-                            </picture>
+                                <img src="img/eng_pics/eng_pic_7.jpg" alt="Pre-Wedding 7"/>
+
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_8.jpg">
                         <div class="image-box">
-                            <picture>
-                              <source srcset="img/eng_pics/webp_eng_pic_8.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_8.jpg" alt="Pre-Wedding 8" loading="lazy">
-                            </picture>
+                                <img src="img/eng_pics/eng_pic_8.jpg" alt="Pre-Wedding 8"/>
                         </div>
                     </a>
                 </div>                
@@ -336,80 +319,64 @@
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_9.jpg">
                         <div class="image-box">
-                            <picture>
-                              <source srcset="img/eng_pics/webp_eng_pic_9.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_9.jpg" alt="Pre-Wedding 9" loading="lazy">
-                            </picture>
+                                <img src="img/eng_pics/eng_pic_9.jpg" alt="Pre-Wedding 9"/>
+
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_10.jpg">
                         <div class="image-box">
-                            <picture>
-                              <source srcset="img/eng_pics/webp_eng_pic_10.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_10.jpg" alt="Pre-Wedding 10" loading="lazy">
-                            </picture>
+                                <img src="img/eng_pics/eng_pic_10.jpg" alt="Pre-Wedding 10"/>
+
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_11.jpg" loading="lazy">
                         <div class="image-box">
-                            <picture>
-                              <source srcset="img/eng_pics/webp_eng_pic_11.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_11.jpg" alt="Pre-Wedding 11" loading="lazy">
-                            </picture>
+                                <img src="img/eng_pics/eng_pic_11.jpg" alt="Pre-Wedding 11"/>
+
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_12.jpg">
                         <div class="image-box">
-                            <picture>
-                              <source srcset="img/eng_pics/webp_eng_pic_12.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_12.jpg" alt="Pre-Wedding 12" loading="lazy">
-                            </picture>
+                                <img src="img/eng_pics/eng_pic_12.jpg" alt="Pre-Wedding 12"/>
+
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_13.jpg">
                         <div class="image-box">
-                            <picture>
-                              <source srcset="img/eng_pics/webp_eng_pic_13.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_13.jpg" alt="Pre-Wedding 13" loading="lazy">
-                            </picture>
+                                <img src="img/eng_pics/eng_pic_13.jpg" alt="Pre-Wedding 13"/>
+
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_14.jpg">
                         <div class="image-box">
-                            <picture>
-                              <source srcset="img/eng_pics/webp_eng_pic_14.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_14.jpg" alt="Pre-Wedding 14" loading="lazy">
-                            </picture>
+                                <img src="img/eng_pics/eng_pic_14.jpg" alt="Pre-Wedding 14"/>
+
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_15.jpg">
                         <div class="image-box">
-                            <picture>
-                              <source srcset="img/eng_pics/webp_eng_pic_15.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_15.jpg" alt="Pre-Wedding 15" loading="lazy">
-                            </picture>
+                                <img src="img/eng_pics/eng_pic_15.jpg" alt="Pre-Wedding 15"/>
+
                         </div>
                     </a>
                 </div>
                 <div class="carousel-item">
                     <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_16.jpg">
                         <div class="image-box">
-                            <picture>
-                              <source srcset="img/eng_pics/webp_eng_pic_16.webp" type="image/webp">
-                              <img src="img/eng_pics/eng_pic_16.jpg" alt="Pre-Wedding 16" loading="lazy">
-                            </picture>
+                                <img src="img/eng_pics/eng_pic_16.jpg" alt="Pre-Wedding 16"/>
+
                         </div>
                     </a>
                 </div>    
@@ -716,7 +683,7 @@ document.addEventListener("DOMContentLoaded", function () {
       track.appendChild(clone);
     });
 
-    const scrollSpeed = window.innerWidth <= 768 ? 4 : 2;
+    const scrollSpeed = 0.5;
     const scrollStep = 420;
     let pauseUntil = 0;
 
@@ -1043,14 +1010,14 @@ document.addEventListener("DOMContentLoaded", function () {
 <script>
   document.addEventListener("DOMContentLoaded", function () {
 const images = [
+  "img/run-1.jpg",
   "img/run-2.jpg",
-  "img/run-6.jpg",
-  "img/run-8.jpg",
-  "img/run-5.jpg",
-
   "img/run-3.jpg",
+  "img/run-4.jpg",
+  "img/run-5.jpg",
+  "img/run-6.jpg",
   "img/run-7.jpg",
-  "img/run-1.jpg"
+  "img/run-8.jpg"
 ];
 
 
