--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <title>Simon & Amanda getting hitched!</title>
-    <meta name="description" content="We would like to invite you to our big day.">
+    <title>Simon & Amanda</title>
+    <meta name="description" content="Thank you for celebrating this joyous occasion with us!">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#ffffff">
-    <meta property="og:title" content="Simon & Amanda getting hitched">
-    <meta property="og:title" content="Simon & Amanda getting hitched">
-    <meta property="og:description" content="We would like to invite you to our big day.">
+    <meta property="og:title" content="Simon & Amanda">
+    <meta property="og:description" content="Thank you for celebrating this joyous occasion with us!">
     <meta property="og:image" content="https://wedding.ramswaroop.me/img/hero-min.jpg">
     <meta property="og:type" content="website">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
@@ -74,6 +73,7 @@
                 <div class="header-nav">
                     <nav>
                         <ul class="primary-nav">
+                            <li><a href="#invitation">Schedule</a></li>
                             <li><a href="#beginnings">Our Story</a></li>
                             <li><a href="#eng-pics">Gallery</a></li>
                             <li><a href="#faq">Q&A</a></li>
@@ -106,33 +106,73 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <p>Thank you for celebrating this joyous occasion with us!</p>
+                <p>We warmly invite you to witness our holy matrimony.<br>
+                  Thank you for celebrating this joyous occasion with us!</p>
             </div>
         </div>
         <div class="row text-center countdown-row">
             <div class="col-md-12">
                 <h3 id="wedding-date">Saturday, September 27, 2025</h3>
                 <div class="event-details">
-  <h4 class="venue-name">Dinner Banquet</h4>
-  <p class="venue-location">Conrad Singapore Marina Bay</p>
-  <p class="event-time"><i class="fa fa-clock-o"></i>&nbsp;07:00pm – 11:00pm</p>
-</div>
-  <div class="countdown-wrapper">
-    <div class="countdown-image-box">
-      <img src="img/D1_09740.jpg" alt="Countdown BG" class="countdown-bg" />
-      
-    <!-- Countdown text overlayed -->
-    <div class="countdown-text">
+
+<div class="countdown-wrapper text-center">
+  <div class="countdown-box-small">
+    <img src="img/watch.jpg" alt="Countdown" class="countdown-bg">
+    <div class="countdown-text-overlay">
       <span id="days">--</span> Days
       <span id="hours">--</span> Hrs
       <span id="minutes">--</span> Min
       <span id="seconds">--</span> Sec
     </div>
   </div>
+  <div class="countdown-rsvp-spacing">
+    
+  </div>
+</div>
 
-  <!-- RSVP button below the image -->
-  <a href="#rsvp" class="rsvp-btn">RSVP</a>
-</div>            
+
+ <!-- <h4 class="venue-name">Dinner Banquet</h4>
+  <p class="venue-location">Conrad Singapore Marina Bay</p>
+  <p class="event-time"><i class="fa fa-clock-o"></i>&nbsp;07:00pm – 11:00pm</p>-->
+
+    <div class="event-subsection">
+      <h4 class="event-title">Wedding Ceremony & Lunch Reception</h4>
+      <p class="venue-location">Living Hope Methodist Church</p>
+
+      <div class="event-time-table">
+        <div><strong>10:30am – 11:00am</strong></div>
+        <div>Registration</div>
+        <div><strong>11:00am – 12:00pm</strong></div>
+        <div>Holy Matrimony</div>
+        <div><strong>12:30pm onwards</strong></div>
+        <div>Photo-taking & Lunch Reception</div>
+      </div>
+
+      <p class="event-seating-note">Please be seated by <strong>10:45am</strong></p>
+    </div>
+
+    <hr class="event-divider">
+
+    <div class="event-subsection">
+      <h4 class="event-title">Dinner Banquet</h4>
+      <p class="venue-location">Conrad Singapore Marina Bay</p>
+
+      <div class="event-time-table">
+        <div><strong>06:30pm – 07:30pm</strong></div>
+        <div>Cocktail Reception</div>
+        <div><strong>07:30pm – 11:00pm</strong></div>
+        <div>Dinner Banquet</div>
+      </div>
+
+      <p class="event-seating-note">Please be seated by <strong>07:15pm</strong></p>
+    </div>
+
+  </div>
+</div>
+
+
+<a href="#rsvp" class="btn btn-accent btn-large rsvp-btn">RSVP</a>
+
 </section>
 
 
@@ -164,7 +204,7 @@
 
 -->
 
-<section class="events section-padding" id="beginnings" style="background-color: #fff;">
+<section class="events section-padding" id="beginnings" style="background-color: #f7f8fc;">
   <div class="container">
     <div class="row">
       <div class="col-md-12 text-center">
@@ -417,11 +457,14 @@
 
 <section id="map" class="section-padding" style="background-color: #f8f9fd;">
   <div class="text-center">
-    <h3>How do I get there?</h3>
-    <p>It's way easier than you think!</p>
+    <h3>Getting here</h3>
+    <!--<p>It's way easier than you think!</p>-->
   </div>
 
+  <div style="margin: 40px 0;"></div>
+
   <!-- 📹 Video section with container and rounded corners -->
+   <!--
   <div class="container">
     <div id="video-bg" class="rounded-box overflow-hidden">
       <div id="bgndVideo" class="player"
@@ -432,9 +475,7 @@
         <p>Grand Ballroom</p>
       </div>
     </div>
-  </div>
-
-  <!-- Spacer -->
+  </div>-->
   <div style="margin: 40px 0;"></div>
 
 <div class="container position-relative">
@@ -466,7 +507,6 @@
 
 </div>
 
-
 </section>
 
 
@@ -493,7 +533,7 @@
 
       <!-- RSVP Form -->
       <div class="rsvp-form-col col-md-6 text-left">
-        <h3>What are you waiting for?</h3>
+        <h3>Celebrate this joyous occasion with us!</h3>
         <p>Please fill in your details below</p>
 
         <form id="rsvp-form" class="rsvp-form" method="POST">
@@ -591,11 +631,11 @@
         </div>
         <div class="faq-item">
           <div class="faq-question">Can I bring a guest/plus-one?</div>
-          <div class="faq-answer">Yes, please let us know so we can make arrangements accordingly</div>
+          <div class="faq-answer">Yes! please let us know so we can make arrangements accordingly</div>
         </div>
         <div class="faq-item">
-          <div class="faq-question">Will there be complimentary parking?</div>
-          <div class="faq-answer">Yes, complimentary parking coupons are available</div>
+          <div class="faq-question">I'm planning to drive, where can I park?</div>
+          <div class="faq-answer"><p>You may park at the <a href="https://maps.app.goo.gl/Y62Avcqk8d7aV2gaA" target="_blank" style="text-decoration: underline;">multi-story carpark</a> behind the church.</p></div>
         </div>
       </div>
     </div>
@@ -609,7 +649,7 @@
         <div class="row">
             <div class="col-sm-12 text-center content">
                 <span class="to-top-wrapper"><a href="#top" class="to-top"><i class="fa fa-angle-up"></i></a></span>
-                <p>Crafted by TRISTAN with lots of <span class="fa fa-heart pulse2"></span> for HIMSELF</p>
+                <p>Crafted jointly by us <span class="fa fa-heart pulse2"></span> two non-CS students</p>
             </div>
         </div>
     </div>
@@ -683,7 +723,7 @@ document.addEventListener("DOMContentLoaded", function () {
       track.appendChild(clone);
     });
 
-    const scrollSpeed = 0.5;
+    const scrollSpeed = window.innerWidth <= 768 ? 4 : 2;
     const scrollStep = 420;
     let pauseUntil = 0;
 
@@ -1045,9 +1085,6 @@ function showNextImage() {
   caption.textContent = "See you there! 🏃🏻‍♂️🏃‍♀️"; // Fixed caption
   showingA = !showingA;
 }
-
-
-    setInterval(showNextImage, 300); // 0.3s switch
     setInterval(showNextImage, 300); // 0.3s switch
   });
 </script>
