--- a/index.html
+++ b/index.html
@@ -829,18 +829,59 @@ document.addEventListener("DOMContentLoaded", function () {
 
 <script>
   document.addEventListener("DOMContentLoaded", function () {
-    const form = document.querySelector(".rsvp-form"); // Adjust selector if needed
+    const form = document.querySelector(".rsvp-form");
     const contactInput = document.getElementById("contact");
+    const alertWrapper = document.getElementById("alert-wrapper");
+
+    let responseValue = null; // Track which button is clicked
+
+    // Track which button was pressed
+    const buttons = form.querySelectorAll("button[type=submit][name=response]");
+    buttons.forEach(button => {
+      button.addEventListener("click", function () {
+        responseValue = this.value === "accept" ? "yes" : "no";
+      });
+    });
 
     form.addEventListener("submit", function (e) {
+      e.preventDefault();
+
       const contactValue = contactInput.value.trim();
       const phonePattern = /^[689]\d{7}$/;
 
       if (!phonePattern.test(contactValue)) {
         alert("Please enter a valid 8-digit Singapore contact number");
         contactInput.focus();
-        e.preventDefault();
+        return;
       }
+
+      alertWrapper.innerHTML = "<p>Saving your details...</p>";
+
+      const formData = new FormData(form);
+      if (responseValue) {
+        formData.set("response", responseValue); // ✅ add "yes"/"no" explicitly
+      }
+
+      const data = {};
+      formData.forEach((value, key) => {
+        data[key] = value;
+      });
+
+      const scriptURL = "https://script.google.com/macros/s/AKfycbyZIuibGZvvOgMAPmGdJFpfW3FCa2DOE6h-RCbTy5oEE-By4v2cSdg7zViAIG_UzacC/exec";
+
+      fetch(scriptURL, {
+        method: 'POST',
+        mode: 'no-cors',
+        body: new URLSearchParams(data)
+      })
+        .then(() => {
+          alertWrapper.innerHTML = "<p>Thanks for RSVPing!</p>";
+          form.reset();
+        })
+        .catch(error => {
+          console.error("Error!", error.message);
+          alertWrapper.innerHTML = "<p>Something went wrong. Please try again later.</p>";
+        });
     });
   });
 </script>
