--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3 class="header">Chasing Sunsets Over the Years</h3>
+                <h3 class="header">Chasing Sunsets Over the Years TEST1</h3>
             </div>
 
     <!-- Fade mask wrapper -->
@@ -296,16 +296,17 @@
           </a>
         </div>
 
-        <div class="carousel-item">
-          <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_3.jpg">
-            <div class="image-box">
-              <picture>
-                <source srcset="img/eng_pics/webp/eng_pic_3.webp" type="image/webp">
-                <img src="img/eng_pics/eng_pic_3.jpg" alt="Pre-Wedding 3">
-              </picture>
-            </div>
-          </a>
-        </div>
+<div class="carousel-item">
+  <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_3.jpg">
+    <div class="image-box">
+      <img
+        src="img/eng_pics/webp/eng_pic_3.webp"
+        alt="Pre-Wedding 3"
+        onerror="this.onerror=null;this.src='img/eng_pics/eng_pic_3.jpg';"
+      >
+    </div>
+  </a>
+</div>
 
         <div class="carousel-item">
           <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_4.jpg">
