--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3 class="header">Chasing Sunsets Over the Years TEST1</h3>
+                <h3 class="header">Chasing Sunsets Over the Years</h3>
             </div>
 
     <!-- Fade mask wrapper -->
@@ -297,12 +297,12 @@
         </div>
 
 <div class="carousel-item">
-  <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_3.jpg">
+  <a class="fancybox" rel="group" href="img/eng_pics/eng_pic_3.webp">
     <div class="image-box">
       <img
         src="img/eng_pics/webp/eng_pic_3.webp"
         alt="Pre-Wedding 3"
-        onerror="this.onerror=null;this.src='img/eng_pics/eng_pic_3.jpg';"
+        onerror="this.onerror=null;this.src='img/eng_pics/eng_pic_3.webp';"
       >
     </div>
   </a>
