--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="manifest.json">
     <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
+    <link href="https://fonts.googleapis.com/css2?family=Petit+Formal+Script&display=swap" rel="stylesheet">
+
 
     <script>
         // load css files from CDN if local node_modules fail
@@ -76,7 +78,7 @@
                             <li><a href="#invitation">Schedule</a></li>
                             <li><a href="#beginnings">Our Story</a></li>
                             <li><a href="#eng-pics">Gallery</a></li>
-                            <li><a href="#faq">Q&A</a></li>
+                            <li><a href="#faq">Q<span class="alt-amp">&</span>A</a></li>
                         </ul>
                         <ul class="member-actions">
                             <li><a href="#map" class="login">Venue</a></li>
@@ -92,7 +94,8 @@
     </section>
 
     <div class="hero-title-container text-center">
-        <img src="img/logo-lg.png" alt="Simon 💙 Amanda" class="hero-logo-img">
+        <h1 class="hero-names">Simon & Amanda</h1>
+
         <!--<div>
             <a href="#rsvp" class="btn btn-accent btn-large rsvp-btn">RSVP</a>
         </div>-->
@@ -136,7 +139,7 @@
   <p class="event-time"><i class="fa fa-clock-o"></i>&nbsp;07:00pm – 11:00pm</p>-->
 
     <div class="event-subsection">
-      <h4 class="event-title">Wedding Ceremony & Lunch Reception</h4>
+      <h4 class="event-title">Wedding Ceremony + Lunch Reception</h4>
       <p class="venue-location">Living Hope Methodist Church</p>
 
       <div class="event-time-table">
@@ -606,26 +609,7 @@
 
 </div>
 
-<div class="container position-relative" style="margin-top: 80px;">
-  <div id="church-map-canvas" class="rounded-box overflow-hidden" style="height: 400px;"></div>
 
-  <div id="map-content-wrapper" class="pointer-events-none">
-    <div class="map-content-side pointer-events-auto">
-      <div class="map-info-text">
-        <h5>LIVING HOPE<span class="mobile-break"><br></span>METHODIST CHURCH</h5>
-        <p>20 Tampines Street 33,<br>Singapore 529259</p>
-      </div>
-      <div class="map-info-buttons">
-        <a class="btn btn-fill btn-small" href="https://maps.app.goo.gl/ySbPCkUQhBNpGG4Z9" target="_blank">
-          <i class="fa fa-location-arrow"></i>&nbsp;&nbsp;Directions
-        </a>
-        <a class="btn btn-accent btn-small" href="https://www.google.com/maps?q=1.3519126996513025,103.96053388185229" target="_blank">
-          <i class="fa fa-map-marker"></i>&nbsp;&nbsp;Show Map
-        </a>
-      </div>
-    </div>
-  </div>
-</div>
 
 
 </section>
