--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <section class="navigation">
         <header>
             <div class="header-content">
-                <div class="logo"><a href="#"><img src="img/logo.png" alt="Logo"></a></div>
+                <div class="logo"><a href="#top" class="to-top"><img src="img/logo.png" alt="Logo"></a></div>
                 <div class="header-nav">
                     <nav>
                         <ul class="primary-nav">
@@ -105,7 +105,8 @@
 
 </section>
 
-<section id="invitation" class="section-padding">
+
+<section id="thank you" class="section-padding">
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
@@ -113,6 +114,13 @@
                   Thank you for celebrating this joyous occasion with us!</p>
             </div>
         </div>
+    </div>
+</section>
+
+
+<section id="invitation" class="section-padding">
+    <div class="container">
+
         <div class="row text-center countdown-row">
             <div class="col-md-12">
                 <h3 id="wedding-date">Saturday, September 27, 2025</h3>
@@ -148,7 +156,7 @@
         <div><strong>11:00am – 12:00pm</strong></div>
         <div>Holy Matrimony</div>
         <div><strong>12:30pm onwards</strong></div>
-        <div>Photo-taking & Lunch Reception</div>
+        <div>Photo-taking + Lunch Reception</div>
       </div>
 
       <p class="event-seating-note">Please be seated by <strong>10:45am</strong></p>
@@ -215,7 +223,7 @@
       </div>
     </div>
 
-    <div class="proposal-block text-center fade-down">
+    <div class="proposal-block text-center fade-right">
       <div class="aspect-ratio-box proposal-wrapper">
         <img src="img/beginnings.jpg" alt="Track" class="fade-image active" style="object-fit: cover; border-radius: 10px;">
       </div>
@@ -225,6 +233,20 @@
       Back to where our story began!
     </p>
   </div>
+
+  <div class="container">
+    <div class="proposal-block text-center fade-left">
+      <div class="aspect-ratio-box proposal-wrapper">
+        <img src="img/west-coast.jpg" alt="WCP Sunset" class="fade-image active" style="object-fit: cover; border-radius: 10px;">
+      </div>
+    </div>
+
+    <p class="caption-space">
+      The story goes on — chasing sunsets together
+    </p>
+  </div>
+
+
 </section>
 
 <section class="events section-padding" id="events" style="background-color: #f7f8fc;">
@@ -235,7 +257,7 @@
       <!-- First Row -->
       <div class="timeline-item">
         <div class="timeline-content left">
-          <h4><strong><em>What happened that day</em></strong></h4>
+          <h4><strong><em>On that stomry day</em></strong></h4>
           <p>Dark, rainy, just both of us. No pictures, just the most beautiful words said by Simon, forming a memory that could last forever</p>
         </div>
         <div class="timeline-image right" >
@@ -285,7 +307,7 @@
   <div class="mobile-timeline-item">
     <div class="dot-line"></div>
     <div class="mobile-content">
-      <h4><strong><em>What happened that day</em></strong></h4>
+      <h4><strong><em>On that stormy day</em></strong></h4>
             <div class="image-box">
             <img src="img/Proposal-1.jpg" alt="Proposal Sunset" class="fade-right">
             </div>
