Changed captions and banner image

--- a/index.html
+++ b/index.html
@@ -252,13 +252,17 @@
 <section class="events section-padding" id="events" style="background-color: #f7f8fc;">
   <div class="container text-center">
     <h3 class="header">The Engagement</h3>
+    <p class="caption-space"> 
+      <span>Long story short: Simon kept giving Amanda the most <em>unexpected</em>&nbsp; but sweet surprises &#9829;</span><br>
+      <span>From her birthday plot twist to a rainy island adventure!</span>
+     </p>
 
     <div class="proposal-timeline-fixed">
       <!-- First Row -->
       <div class="timeline-item">
         <div class="timeline-content left">
-          <h4><strong><em>On that stomry day</em></strong></h4>
-          <p>Dark, rainy, just both of us. No pictures, just the most beautiful words said by Simon, forming a memory that could last forever</p>
+          <h4><strong><em>On that stormy day...he proposed</em></strong></h4>
+          <p> Dark, rainy, just us at the deserted island. No photos—only Simon's words (captured in his drawing), creating a memory that speaks louder than pictures. </p>
         </div>
         <div class="timeline-image right" >
           <a class="fancybox" rel="group" href="img/Proposal-1.jpg">
