banner pic tryout latest edited pic

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
       <div class="timeline-item">
         <div class="timeline-content left">
           <h4><strong><em>On that stormy day...he proposed</em></strong></h4>
-          <p> Dark, rainy, just us at the deserted island. No photos—only Simon's words (captured in his drawing), creating a memory that speaks louder than pictures. </p>
+          <p> Dark, rainy, just us on a deserted island. No photos—only Simon’s words, moving Amanda to tears and creating a memory beyond pictures (now captured in his drawing). </p>
         </div>
         <div class="timeline-image right" >
           <a class="fancybox" rel="group" href="img/Proposal-1.jpg">
